# quant-foundation-gat

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  README.md  audit_fixes.md  audit_fixes_v2.md  audit_report_v1.md  audit_report_v2.md  docker-compose.risingwave.yml  docker-compose.yml  infra.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bruin/: .bruin.yml  README.md
configs/: README.md  energy_universe.yaml  energy_universe_gnn.yaml  project.yaml  second_foundation_project.yaml  universe.yaml
data/warehouse/: gat_equity.pt
dbt_energy_alpha/: README.md  dbt_project.yml  profiles.yml
dbt_quant_alpha/: README.md  dbt_project.yml  profiles.yml
docs/: CAPSTONE_STATUS.md  README.md  alpha_research.md  architecture.md  cloud_kubernetes.md  decisions.md  energy_forecasting.md  gat_experiment_log.md  gnn_capstone_design.md  gpt55_audit_response.md  semester_plan.md  zoomcamp_coverage.md
docs/agents/: domain.md  (+2 more)
schemas/: README.md  energy_signal.avsc
streamlit_app/: README.md  app.py  common.py  home.py
tests/: README.md  test_alpha_factors.py  test_attention.py  test_bruin_graph.py  test_cloud_export.py  test_diagnostics.py  test_dlt_pipelines.py  test_edges_energy.py  test_edges_equity.py  test_energy_alpha.py  test_energy_forecast.py  test_energy_forecast_edge.py  test_energy_forecast_gat.py  test_entsoe.py  test_factor_provider.py  test_gat.py  test_graph_propagate.py  test_leakage.py  test_quality.py  test_risingwave_simulator.py  test_run_gat_energy.py  test_run_gat_equity.py  test_training.py
(+184 files in other folders)
